--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,3 +32,12 @@ main {
     background: url(../imagens/frame-iphone.png) no-repeat fixed;
     background-size: auto;
 }
+
+#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+
+}
